--- a/todo_list/templates/home.html
+++ b/todo_list/templates/home.html
@@ -1,1 +1,37 @@
-<h1>Hello World</h1>
+{% extends 'base.html' %}
+
+{% block title %}To-Do List{% endblock %}
+
+{% block content %}
+<h3>List <small>Your todos :)</small></h3>
+
+{% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-dismissible alert-{{ message.tags }}">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <strong>Heads up!</strong>
+        {{ message }}
+    </div>
+    {% endfor %}
+{% endif %}
+{% if all_items %}
+<table class="table table-hover table-border">
+    <thead>
+        <tr class="text-center">
+            <th scope="col">Todo</th>
+            <th scope="col">Completed</th>
+            <th scope="col">Action</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for todo in all_items %}
+        <tr class="text-center {% if todo.completed %}table-success{% endif %}">
+            <td scope="row" class="striker">{{ todo.item}}</td>
+            <td>{{ todo.completed }}</td>
+            <td><a href="{% url 'delete' todo.id %}" class="btn btn-danger btn-sm">Delete</a></td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table> 
+{% endif %}
+{% endblock %}
